реализовал работу с файлами оценок студентов. изменил порядок добавления оценок

--- a/CLI.lib/Interface.lib.csproj
+++ b/CLI.lib/Interface.lib.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\CRUD\CRUD.lib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CRUDInterface\FileInterface\Files\" />
+  </ItemGroup>
+
 </Project>
