--- a/CRUD/CRUD.lib.csproj
+++ b/CRUD/CRUD.lib.csproj
@@ -7,9 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Files\**" />
-    <EmbeddedResource Remove="Files\**" />
-    <None Remove="Files\**" />
+    <ProjectReference Include="..\Classes\Classes.Lib.csproj" />
   </ItemGroup>
 
 </Project>
